--- a/StreamingSiteUI/src/app/discover/discover.component.html
+++ b/StreamingSiteUI/src/app/discover/discover.component.html
@@ -1,3 +1,66 @@
-<p>
-  discover works!
-</p>
+<div id="page-wrapper">
+<div class="albums second">
+    <div class="tittle-head">
+      <h3 class="tittle">Discover
+        <span class="new">View</span>
+      </h3>
+
+      <div class="clearfix"> </div>
+    </div>
+    <div class="col-md-3 content-grid">
+      <a href="single.html">
+        <img src="assets/images/v11.jpg">
+      </a>
+
+    </div>
+    <div class="col-md-3 content-grid">
+      <a href="single.html">
+        <img src="assets/images/v22.jpg">
+      </a>
+
+    </div>
+    <div class="col-md-3 content-grid">
+      <a href="single.html">
+        <img src="assets/images/v33.jpg">
+      </a>
+
+    </div>
+    <div class="col-md-3 content-grid last-grid">
+      <a href="single.html">
+        <img src="assets/images/v44.jpg">
+      </a>
+
+    </div>
+    <div class="col-md-3 content-grid">
+      <a href="single.html">
+        <img src="assets/images/v55.jpg">
+      </a>
+
+    </div>
+    <div class="col-md-3 content-grid">
+      <a href="single.html">
+        <img src="assets/images/v66.jpg">
+      </a>
+
+    </div>
+    <div class="col-md-3 content-grid">
+      <a href="single.html">
+        <img src="assets/images/v11.jpg">
+      </a>
+
+    </div>
+    <div class="col-md-3 content-grid last-grid">
+      <a href="single.html">
+        <img src="assets/images/v22.jpg">
+      </a>
+
+    </div>
+    <div class="clearfix"> </div>
+ 
+    
+  <!--//discover-view-->
+
+</div>
+
+
+
