--- a/StreamingSiteUI/src/app/app.component.html
+++ b/StreamingSiteUI/src/app/app.component.html
@@ -1,131 +1,158 @@
 
     <section>
-      <!-- left side start-->
-		<div class="left-side sticky-left-side">
-
-			<!--logo and iconic logo start-->
-			<div class="logo">
-				<!-- <h1><a href="index.html">Vroom</a></h1> -->
+		<!-- left side start-->
+		  
+	  
+		<!-- /w3l-agile -->
+		  <!-- signup -->
+		  <div class="modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+			  <div class="modal-content modal-info">
+				<div class="modal-header">
+				  <button type="button" id="exit_button"class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+				</div>
+				<div class="modal-body modal-spa">
+				  <div class="sign-grids">
+					<div class="sign">
+					  <div class="sign-left">
+						<ul>
+						  <li><a class="fb" href="#"><i></i>Sign in with Facebook</a></li>
+						  <li><a class="goog" href="#"><i></i>Sign in with Google</a></li>
+						  <li><a class="linkin" href="#"><i></i>Sign in with Linkedin</a></li>
+						</ul>
+					  </div>
+					  <div class="sign-right">
+						<form [formGroup]="loginForm" (ngSubmit)="login()">
+		
+							<h3>Sign into your Account </h3>
+							<div class="formGroup row">
+								<input type="text" value="Name" formControlName="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+						  
+							</div>
+							<div class="formGroup row">
+								<input type="password" value="Password" formControlName="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">	
+						  
+					</div>
+					<div class="formGroup row">
+							<input type="submit" value="Sign In">	
+						
+						</div>
+					</form>
+						
+					  </div>
+					  <div class="clearfix"></div>								
+					</div>
+					<p>By logging in you agree to our <span>Terms and Conditions</span> and <span>Privacy Policy</span></p>
+				  </div>
+				</div>
+			  </div>
+			</div>
 			</div>
 			
- 	 <!-- /w3l-agile -->
-			<!--logo and iconic logo end-->
-			<div class="left-side-inner">
-
-				<!--sidebar nav start-->
-					<ul class="nav nav-pills nav-stacked custom-nav">
-						<li ><a routerLink="home" routerLinkActive="active"><i class="lnr lnr-home"></i><span>Home</span></a></li>
-						<li><a routerLink="tvshows" routerLinkActive="active"><i class="lnr lnr-camera-video"></i> <span>TV Shows</span></a></li>
-						<li><a routerLink="movies" routerLinkActive="active"><i class="lnr lnr-film-play"></i><span>Movies</span></a></li>
-						<li><a routerLink="recently_added" routerLinkActive="active"><i class="lnr lnr-clock"></i> <span>Recently Added</span></a></li> 
-						<li><a routerlink="userlist" routerLinkActive="active"><i class="lnr lnr-list"></i> <span>My List</span></a></li>						
-						    
-					</ul>
-				<!--sidebar nav end-->
-			</div>
-		</div>
-	
- 	 <!-- /w3l-agile -->
-		<!-- signup -->
-			<div class="modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal fade" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 				<div class="modal-dialog" role="document">
 					<div class="modal-content modal-info">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
-						</div>
-						<div class="modal-body modal-spa">
-							<div class="sign-grids">
-								<div class="sign">
-									<div class="sign-left">
-										<ul>
-											<li><a class="fb" href="#"><i></i>Sign in with Facebook</a></li>
-											<li><a class="goog" href="#"><i></i>Sign in with Google</a></li>
-											<li><a class="linkin" href="#"><i></i>Sign in with Linkedin</a></li>
-										</ul>
-									</div>
-									<div class="sign-right">
-										<form action="#" method="post">
-
-											<h3>Create your account </h3>
-											<input type="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
-											<input type="text" value="Mobile number" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Mobile number';}" required="">
-											<input type="text" value="Email id" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email id';}" required="">	
-											<input type="password" value="Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">	
-											
-											<input type="submit" value="CREATE ACCOUNT" >
-										</form>
-									</div>
-									<div class="clearfix"></div>								
-								</div>
-								<p>By logging in you agree to our <span>Terms and Conditions</span> and <span>Privacy Policy</span></p>
+					<div class="modal-header">
+						<button type="button" id="exit_button"class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+					</div>
+					<div class="modal-body modal-spa">
+						<div class="sign-grids">
+						<div class="sign">
+							<div class="sign-left">
+							<ul>
+								<li><a class="fb" href="#"><i></i>Sign in with Facebook</a></li>
+								<li><a class="goog" href="#"><i></i>Sign in with Google</a></li>
+								<li><a class="linkin" href="#"><i></i>Sign in with Linkedin</a></li>
+							</ul>
 							</div>
+							<div class="sign-right">
+							<form [formGroup]="loginForm" (ngSubmit)="login()">
+			
+								<h3>Sign into your Account </h3>
+								<div class="formGroup row">
+									<input type="text" value="Name" formControlName="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+								
+								</div>
+								<div class="formGroup row">
+									<input type="password" value="Password" formControlName="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">	
+								
+						</div>
+						<div class="formGroup row">
+								<input type="submit" value="Sign In">	
+							
+							</div>
+						</form>
+							
+							</div>
+							<div class="clearfix"></div>								
+						</div>
+						<p>By logging in you agree to our <span>Terms and Conditions</span> and <span>Privacy Policy</span></p>
 						</div>
 					</div>
+					</div>
 				</div>
-			</div>
-			<!-- //signup -->
- 	 <!-- /w3l-agile -->
-		<!-- left side end-->
-		<!-- main content start-->
-		<div class="main-content">
-			<!-- header-starts -->
-			<div class="header-section" style="position:fixed;top:0;z-index:9999;width:100%">
-			<!--toggle button start-->
-			<a class="toggle-btn  menu-collapsed"><i class="fa fa-bars"></i></a>
-			<!--toggle button end-->
-			<!--notification menu star t -->
-				<div class="menu-right" >
-					<div class="profile_details" >		
-						  	
-							 
-							
-										
-									<!-- //search-scripts -->
-											 <!---->
-										
-											<div class="col-md-4 login-pop" style="right:5px">
-												<div id="loginpop"> <a href="#" data-toggle="modal" data-target="#myModal5"><span>Sign In<i class="arrow glyphicon glyphicon-chevron-right"></i></span></a>
-														<div id="loginBox">  
-												<form action="#" method="post" id="loginForm">
-																	<fieldset id="body">
-																		<fieldset>
-																			  <label for="email">Email Address</label>
-																			  <input type="text" name="email" id="email">
-																		</fieldset>
-																		<fieldset>
-																				<label for="password">Password</label>
-																				<input type="password" name="password" id="password">
-																		 </fieldset>
-																		<input type="submit" id="login" value="Sign in">
-																		<label for="checkbox"><input type="checkbox" id="checkbox"> <i>Remember me</i></label>
-																	</fieldset>
-																<span><a href="#">Forgot your password?</a></span>
-														 </form>
-													</div>
+				</div>
+		 
+			  <!-- //signup -->
+		<!-- /w3l-agile -->
+		  <!-- left side end-->
+		  <!-- main content start-->
+		  <div class="main-content">
+			  <!-- header-starts -->
+			  <div class="header-section" style="position:fixed;top:0;z-index:9999;width:100%">
+			  <!--toggle button start-->
+				<div id="responsive-nav">
+					<!-- NAV -->
+					<ul class="main-nav nav navbar-nav">
+						<li class="active"><a href="#">Home</a></li>
+						<li><a routerLink="/discover">Tv Shows</a></li>
+						<li><a href="#">Movies</a></li>
+						<li><a routerLink="/recently_added">Recently Added</a></li>
+						<li><a href="/user_list">My List</a></li>
+						
+					</ul>
+					<!-- /NAV -->
+				</div>
+			  <!--toggle button end-->
+			  <!--notification menu star t -->
+				  <div class="menu-right" >
+					  <div class="profile_details" >		
+								
+							   
+							  
+										  
+									  <!-- //search-scripts -->
+											   <!---->
+										  
+											   <div class="col-md-4 login-pop">
+												
+												<div *ngIf="loginButton" id="loginpop"> <a class="col-md-6"href="#" id="loginButton" data-toggle="modal" data-target="#myModal5"><span>Login <i class="arrow glyphicon glyphicon-chevron-right"></i></span></a><a href="#" id="registerButton" class="col-md-6" data-toggle="modal" data-target="#myModal6"><span>Sign Up<i class="arrow glyphicon glyphicon-chevron-right"></i></span></a>
+												
 												</div>
-
-											</div>
-										<div class="clearfix"> </div>
-								</div>
-							<!---->
-						</div>
-					<div class="clearfix"></div>
-				</div>
-			<!--notification menu end -->
-			<!-- //header-ends -->
- 	 <!-- /w3l-agileits -->
-		<!-- //header-ends -->
-			<router-outlet></router-outlet>
-			</div>
-        <!--footer section start-->
-		
-		
-        <!--footer section end-->
- 	 <!-- /w3l-agile -->
-      <!-- main content end-->
-   </section>
+							
+											  </div>
+										  <div class="clearfix"> </div>
+								  </div>
+							  <!---->
+						  </div>
+					  <div class="clearfix"></div>
+				  </div>
+			  <!--notification menu end -->
+			  <!-- //header-ends -->
+		<!-- /w3l-agileits -->
+		  <!-- //header-ends -->
+			  <router-outlet></router-outlet>
+			  </div>
+		  <!--footer section start-->
+		  
+		  
+		  <!--footer section end-->
+		<!-- /w3l-agile -->
+		<!-- main content end-->
+	 </section>
+	
   
-
-<script src="assets/js/scripts.js"></script>
-<!-- Bootstrap Core JavaScript -->
-<script src="assets/js/bootstrap.js"></script>
+  <script src="assets/js/scripts.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="assets/js/bootstrap.js"></script>
+  
