--- a/StreamingSiteUI/src/app/homepage/homepage.component.css
+++ b/StreamingSiteUI/src/app/homepage/homepage.component.css
@@ -29,3 +29,22 @@ tr {
 .info-overlay {
     transition: transform .2s;
 }
+
+carousel {
+    position: relative;
+    top:0;
+}
+.banner-section::after {
+    display: block;
+    position: relative;
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, #272727 100%);
+    margin-top: -150px;
+    height: 150px;
+    width: 100%;
+    content: '';
+  }
+
+  vg-player video {
+      height:550px;
+  }
+  
