--- a/StreamingSiteUI/src/app/discover/discover.component.html
+++ b/StreamingSiteUI/src/app/discover/discover.component.html
@@ -1,8 +1,8 @@
 <div id="page-wrapper">
 <div class="albums second">
     <div class="tittle-head">
-      <h3 class="tittle">Discover
-        <span class="new">View</span>
+      <h3 class="tittle">All Shows
+        <span class="new">New</span>
       </h3>
 
       <div class="clearfix"> </div>
