--- a/StreamingSiteUI/src/app/recentlyadded/recentlyadded.component.html
+++ b/StreamingSiteUI/src/app/recentlyadded/recentlyadded.component.html
@@ -2,7 +2,7 @@
   <div class="inner-content">
     <div class="albums">
         <div class="tittle-head">
-          <h3 class="tittle">TV Shows <span class="new">Highly Rated</span></h3>
+          <h3 class="tittle">Recently Added <span class="new">Recommended</span></h3>
           
           <div class="clearfix"> </div>
         </div>
