--- a/StreamingSiteUI/src/app/app.component.html
+++ b/StreamingSiteUI/src/app/app.component.html
@@ -26,11 +26,11 @@
 		
 							<h3>Sign into your Account </h3>
 							<div class="formGroup row">
-								<input type="text" value="Name" formControlName="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+								<input type="text" placeholder="Email address" formControlName="login_email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
 						  
 							</div>
 							<div class="formGroup row">
-								<input type="password" value="Password" formControlName="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">	
+								<input type="password" placeholder="Password" formControlName="login_password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">	
 						  
 					</div>
 					<div class="formGroup row">
@@ -53,7 +53,7 @@
 				<div class="modal-dialog" role="document">
 					<div class="modal-content modal-info">
 					<div class="modal-header">
-						<button type="button" id="exit_button"class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+						<button type="button" id="registration_exit_button"class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 					</div>
 					<div class="modal-body modal-spa">
 						<div class="sign-grids">
@@ -66,17 +66,30 @@
 							</ul>
 							</div>
 							<div class="sign-right">
-							<form [formGroup]="loginForm" (ngSubmit)="login()">
+							<form [formGroup]="registerForm"(ngSubmit)="signUp()">
 			
 								<h3>Sign into your Account </h3>
 								<div class="formGroup row">
-									<input type="text" value="Name" formControlName="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+									<input type="text" formControlName="first_name" placeholder="First Name" onfocus="this.value = '';" required="">
 								
 								</div>
 								<div class="formGroup row">
-									<input type="password" value="Password" formControlName="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">	
+									<input type="text" placeholder="Second Name" formControlName="second_name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+								
+								</div>
+								<div class="formGroup row">
+									<input type="text" placeholder="Email Address" formControlName="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+								
+								</div>
+								<div class="formGroup row">
+									<input type="password" placeholder="Password" formControlName="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="">	
 								
 						</div>
+						<div class="formGroup row">
+								<input type="password" placeholder="Confirm Password" formControlName="c_password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+							
+							</div>
+							
 						<div class="formGroup row">
 								<input type="submit" value="Sign In">	
 							
@@ -86,7 +99,7 @@
 							</div>
 							<div class="clearfix"></div>								
 						</div>
-						<p>By logging in you agree to our <span>Terms and Conditions</span> and <span>Privacy Policy</span></p>
+						<p>By Signing up you agree to our <span>Terms and Conditions</span> and <span>Privacy Policy</span></p>
 						</div>
 					</div>
 					</div>
@@ -106,7 +119,7 @@
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="#">Home</a></li>
 						<li><a routerLink="/discover">Tv Shows</a></li>
-						<li><a href="#">Movies</a></li>
+						<li><a (click)="logout()">Movies</a></li>
 						<li><a routerLink="/recently_added">Recently Added</a></li>
 						<li><a href="/user_list">My List</a></li>
 						
@@ -126,10 +139,16 @@
 										  
 											   <div class="col-md-4 login-pop">
 												
-												<div *ngIf="loginButton" id="loginpop"> <a class="col-md-6"href="#" id="loginButton" data-toggle="modal" data-target="#myModal5"><span>Login <i class="arrow glyphicon glyphicon-chevron-right"></i></span></a><a href="#" id="registerButton" class="col-md-6" data-toggle="modal" data-target="#myModal6"><span>Sign Up<i class="arrow glyphicon glyphicon-chevron-right"></i></span></a>
+												<div *ngIf="loginButton" id="loginpop" style="margin-top:5px;"> 
+													
+														<a href="#" id="registerButton" class="col-md-6" data-toggle="modal" data-target="#myModal6"><span>Sign Up</span></a>
+													<a class="col-md-6" href="#" id="loginButton" data-toggle="modal" data-target="#myModal5"><span>Login <i class="arrow glyphicon glyphicon-chevron-right"></i></span></a>
 												
 												</div>
-							
+												<div *ngIf="logged_in" id="loginpop" id="loginpop">
+													<h3 style="color:white;">{{userName}}</h3>
+												</div>
+												
 											  </div>
 										  <div class="clearfix"> </div>
 								  </div>
