--- a/StreamingSiteUI/src/app/app.component.html
+++ b/StreamingSiteUI/src/app/app.component.html
@@ -18,7 +18,7 @@
 						<ul>
 						  <li><a class="fb" href="#"><i></i>Sign in with Facebook</a></li>
 						  <li><a class="goog" href="#"><i></i>Sign in with Google</a></li>
-						  <li><a class="linkin" href="#"><i></i>Sign in with Linkedin</a></li>
+						
 						</ul>
 					  </div>
 					  <div class="sign-right">
@@ -37,11 +37,22 @@
 							<input type="submit" value="Sign In">	
 						
 						</div>
+
 					</form>
+					<div class="clearfix">
+						<div class="row">
+							<h3 style="color:black;padding-top:5px;">Not a member? <a href="#"><span style="color:#D10024">Register Here</span></a></h3>
+						</div>
+					</div>
+				
+						
+					
+					
 						
 					  </div>
 					  <div class="clearfix"></div>								
 					</div>
+
 					<p>By logging in you agree to our <span>Terms and Conditions</span> and <span>Privacy Policy</span></p>
 				  </div>
 				</div>
@@ -119,7 +130,7 @@
 					<ul class="main-nav nav navbar-nav">
 						<li class="active"><a href="#">Home</a></li>
 						<li><a routerLink="/discover">Tv Shows</a></li>
-						<li><a (click)="logout()">Movies</a></li>
+						<li><a>Movies</a></li>
 						<li><a routerLink="/recently_added">Recently Added</a></li>
 						<li><a href="/user_list">My List</a></li>
 						
@@ -129,6 +140,7 @@
 			  <!--toggle button end-->
 			  <!--notification menu star t -->
 				  <div class="menu-right" >
+						
 					  <div class="profile_details" >		
 								
 							   
@@ -140,21 +152,20 @@
 											   <div class="col-md-4 login-pop">
 												
 												<div *ngIf="loginButton" style="margin-top:5px;"> 
-													
+													<div id="loginpop"> <a href="#" id="loginButton" data-toggle="modal" data-target="#myModal5"><span>Sign In <i class="arrow glyphicon glyphicon-chevron-right"></i></span></a></div>
 														<!-- <a href="#" id="registerButton" class="col-md-6" data-toggle="modal" data-target="#myModal6"><span>Sign Up</span></a> -->
-													<a class="col-md-6" href="#" id="loginButton" data-toggle="modal" data-target="#myModal5"><span><h3>Login</h3> <i class="arrow glyphicon glyphicon-chevron-right"></i></span></a>
+													<!-- <a class="col-md-6" href="#" id="loginButton" data-toggle="modal" data-target="#myModal5"><span><h3>Login</h3> <i class="arrow glyphicon glyphicon-chevron-right"></i></span></a> -->
 												
 												</div>
-												<div class="dropdown">
-												<div *ngIf="logged_in" id="loginpop" id="loginpop">
+											
+												<div *ngIf="logged_in" id="loginpop">
 													<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><h3 type="button"  style="color:white;"><span class="glyphicon glyphicon-user"></span> {{userName}}</h3></button>
+
+													<button  class="btn btn-secondary dropdown-toggle" (click)="logout()"><h3 type="button" id="logoutButton"><i class="fa fa-sign-in"></i></h3></button>
+
 												</div>
-												<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-													<a class="dropdown-item" href="#">Action</a>
-													<a class="dropdown-item" href="#">Another action</a>
-													<a class="dropdown-item" href="#">Something else here</a>
-												</div>
-												</div>
+											
+												
 												
 											  </div>
 										  <div class="clearfix"> </div>
@@ -162,7 +173,8 @@
 							  <!---->
 						  </div>
 					  <div class="clearfix"></div>
-				  </div>
+					</div>
+					
 			  <!--notification menu end -->
 			  <!-- //header-ends -->
 		<!-- /w3l-agileits -->
