--- a/StreamingSiteUI/src/app/app.component.html
+++ b/StreamingSiteUI/src/app/app.component.html
@@ -77,7 +77,7 @@
 							</ul>
 							</div>
 							<div class="sign-right">
-							<form [formGroup]="registerForm"(ngSubmit)="signUp()">
+							<form [formGroup]="registerForm">
 			
 								<h3>Sign into your Account </h3>
 								<div class="formGroup row">
@@ -128,13 +128,14 @@
 				<div id="responsive-nav">
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a routerLink="/discover">Tv Shows</a></li>
-						<li><a>Movies</a></li>
-						<li><a routerLink="/recently_added">Recently Added</a></li>
-						<li><a href="/user_list">My List</a></li>
+						<li routerLinkActive="active" ><a href="#" routerLink="/home">Home</a></li>
+						<li routerLinkActive="active"><a routerLink="/discover">Tv Shows</a></li>
+						<li routerLinkActive="active"><a routerLink="/discover">Movies</a></li>
+						<li routerLinkActive="active"><a routerLink="/recently_added">Recently Added</a></li>
+						<li *ngIf="logged_in"><a href="/user_list">My List</a></li>
 						
 					</ul>
+					
 					<!-- /NAV -->
 				</div>
 			  <!--toggle button end-->
@@ -161,7 +162,7 @@
 												<div *ngIf="logged_in" id="loginpop">
 													<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><h3 type="button"  style="color:white;"><span class="glyphicon glyphicon-user"></span> {{userName}}</h3></button>
 
-													<button  class="btn btn-secondary dropdown-toggle" (click)="logout()"><h3 type="button" id="logoutButton"><i class="fa fa-sign-in"></i></h3></button>
+													<button class="btn btn-secondary dropdown-toggle" (click)="logout()"><h3 type="button" id="logoutButton"><i class="fa fa-sign-in"></i></h3></button>
 
 												</div>
 											
@@ -193,4 +194,4 @@
   <script src="assets/js/scripts.js"></script>
   <!-- Bootstrap Core JavaScript -->
   <script src="assets/js/bootstrap.js"></script>
-  
+ 
