--- a/StreamingSiteUI/src/app/app.component.html
+++ b/StreamingSiteUI/src/app/app.component.html
@@ -41,7 +41,7 @@
 					</form>
 					<div class="clearfix">
 						<div class="row">
-							<h3 style="color:black;padding-top:5px;">Not a member? <a href="#"><span style="color:#D10024">Register Here</span></a></h3>
+							<h3 style="color:black;padding-top:5px;">Not a member? <a routerLink="register"><span style="color:#D10024">Register Here</span></a></h3>
 						</div>
 					</div>
 				
@@ -129,9 +129,9 @@
 					<!-- NAV -->
 					<ul class="main-nav nav navbar-nav">
 						<li routerLinkActive="active" ><a href="#" routerLink="/home">Home</a></li>
-						<li routerLinkActive="active"><a routerLink="/discover">Tv Shows</a></li>
-						<li routerLinkActive="active"><a routerLink="/discover">Movies</a></li>
-						<li routerLinkActive="active"><a routerLink="/recently_added">Recently Added</a></li>
+						<li routerLinkActive="active"><a routerLink="/movies">Tv Shows</a></li>
+						<li routerLinkActive="active"><a routerLink="/movies">Movies</a></li>
+						<li routerLinkActive="active"><a routerLink="/added">Recently Added</a></li>
 						<li *ngIf="logged_in"><a href="/user_list">My List</a></li>
 						
 					</ul>
@@ -179,7 +179,8 @@
 			  <!--notification menu end -->
 			  <!-- //header-ends -->
 		<!-- /w3l-agileits -->
-		  <!-- //header-ends -->
+			<!-- //header-ends -->
+			<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px' }"></ngx-loading>
 			  <router-outlet></router-outlet>
 			  </div>
 		  <!--footer section start-->
