--- a/StreamingSiteUI/src/app/discover/discover.component.html
+++ b/StreamingSiteUI/src/app/discover/discover.component.html
@@ -1,66 +1,127 @@
+
 <div id="page-wrapper">
-<div class="albums second">
+  
     <div class="tittle-head">
-      <h3 class="tittle">All Shows
-        <span class="new">New</span>
-      </h3>
-
-      <div class="clearfix"> </div>
-    </div>
-    <div class="col-md-3 content-grid">
-      <a href="single.html">
-        <img src="assets/images/v11.jpg">
-      </a>
-
-    </div>
-    <div class="col-md-3 content-grid">
-      <a href="single.html">
-        <img src="assets/images/v22.jpg">
-      </a>
-
-    </div>
-    <div class="col-md-3 content-grid">
-      <a href="single.html">
-        <img src="assets/images/v33.jpg">
-      </a>
-
-    </div>
-    <div class="col-md-3 content-grid last-grid">
-      <a href="single.html">
-        <img src="assets/images/v44.jpg">
-      </a>
-
-    </div>
-    <div class="col-md-3 content-grid">
-      <a href="single.html">
-        <img src="assets/images/v55.jpg">
-      </a>
-
-    </div>
-    <div class="col-md-3 content-grid">
-      <a href="single.html">
-        <img src="assets/images/v66.jpg">
-      </a>
-
-    </div>
-    <div class="col-md-3 content-grid">
-      <a href="single.html">
-        <img src="assets/images/v11.jpg">
-      </a>
-
-    </div>
-    <div class="col-md-3 content-grid last-grid">
-      <a href="single.html">
-        <img src="assets/images/v22.jpg">
-      </a>
-
-    </div>
-    <div class="clearfix"> </div>
- 
+        <h3 class="tittle">New Releases
+          <span class="new">New</span>
+        </h3>
     
-  <!--//discover-view-->
+        <div class="clearfix"> </div>
+      </div>
+
+  <main>   
+      
+    <div class="row">
+      <div class="movie" *ngFor="let media_item of media_listing| slice:0:6; let i=index" (click) ="openInfoOverlay(media_item.media_name)">
+        <div class="text">
+          <h2>{{media_item.media_name}}</h2>
+          <div class="rating">
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot "></div>
+            <div class="dot"></div>
+          </div>
+          <p class="year">2015</p>
+          <p class="genre">Action | Science Fiction</p>
+          <p>{{media_item.description}}</p>
+          
+        </div>
+        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
+        <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:100%;border-radius:10px;"></div>
+      </div>
+      <!-- <div class="movie">
+        <div class="text">
+          <h2>The Martian</h2>
+          <div class="rating">
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot"></div>
+          </div>
+          <p class="year">2015</p>
+          <p class="genre">Action | Science Fiction</p>
+          <p>During a manned mission to Mars, Astronaut Mark Watney is presumed dead after a fierce storm and left behind by his crew. But Watney has survived and finds himself stranded and alone on the hostile planet.</p>
+          <div class="button"> &nbsp;Watch Trailer</div>
+        </div>
+        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/5aGhaIHYuQbqlHWvWYqMCnj40y2.jpg)"></div>
+        <div class="cover" style="background-image: url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/5aGhaIHYuQbqlHWvWYqMCnj40y2.jpg)"></div>
+      </div>
+      <div class="movie">
+        <div class="text">
+          <h2>Star Wars: The Force Awakens</h2>
+          <div class="rating">
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot "></div>
+            <div class="dot"></div>
+          </div>
+          <p class="year">2015</p>
+          <p class="genre">Action | Science Fiction</p>
+          <p>Thirty years after defeating the Galactic Empire, Han Solo and his allies face a new threat from the evil Kylo Ren and his army of Stormtroopers.</p>
+          <div class="button"> &nbsp;Watch Trailer</div>
+        </div>
+        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/vZpB8ezB1IqpxI9rx553TuGwDzJ.jpg)"></div>
+        <div class="cover" style="background-image: url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/vZpB8ezB1IqpxI9rx553TuGwDzJ.jpg)"></div>
+      </div>
+      <div class="movie">
+        <div class="text">
+          <h2>Daddy's Home</h2>
+          <div class="rating">
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+          </div>
+          <p class="year">2015</p>
+          <p class="genre">Action | Science Fiction</p>
+          <p>Stepdad, Brad Whitaker, is a radio host trying to get his stepchildren to love him and call him Dad. But his plans turn upside down when the father returns.</p>
+          <div class="button"> &nbsp;Watch Trailer</div>
+        </div>
+        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/diEAZtU6KJzo6VStL5US8arkdIQ.jpg)"></div>
+        <div class="cover" style="background-image: url(https://image.tmdb.org/t/p/w1280/diEAZtU6KJzo6VStL5US8arkdIQ.jpg)"></div>
+      </div>
+      <div class="movie">
+        <div class="text">
+          <h2>Concussion</h2>
+          <div class="rating">
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+          <p class="year">2015</p>
+          <p class="genre">Action | Science Fiction</p>
+          <p>In Pittsburgh, an accomplished pathologist uncovers the truth about brain damage in football players who suffer repeated concussions in the course of normal play.</p>
+          <div class="button"> &nbsp;Watch Trailer</div>
+        </div>
+        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/vdK1f9kpY5QEwrAiXs9R7PlerNC.jpg)"></div>
+        <div class="cover" style="background-image: url(https://image.tmdb.org/t/p/w1280/vdK1f9kpY5QEwrAiXs9R7PlerNC.jpg)"></div>
+      </div>
+      <div class="movie">
+        <div class="text">
+          <h2>Room</h2>
+          <div class="rating">
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot dot-full"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+          <p class="year">2015</p>
+          <p class="genre">Drama | Thriller</p>
+          <p>Jack is a young boy of 5 years old who has lived all his life in one room. He believes everything within it are the only real things in the world.</p>
+          <div class="button"> &nbsp;Watch Trailer</div>
+        </div>
+        <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/eqFckcHuFCT1FrzLOAvXBb4jHwq.jpg)"></div>
+        <div class="cover" style="background-image: url(https://image.tmdb.org/t/p/w1280/eqFckcHuFCT1FrzLOAvXBb4jHwq.jpg)"></div>
+      </div> -->
+    </div>
+  </main>
+  
 
 </div>
-
-
-
