--- a/StreamingSiteUI/src/app/register/register.component.html
+++ b/StreamingSiteUI/src/app/register/register.component.html
@@ -4,8 +4,8 @@
         <div class="coming-soon-poster col-md-5">
             <img src="assets/images/coming-soon.jpg" style="width:120%;height:100%;">
         </div>
-        <div class="signup">
-            <div class="form">
+        <div>
+            <div>
                 <h3>Sign up</h3>
                 <p>Create your account easy with less information</p>
                 <form action="" [formGroup]="registerForm" (ngSubmit)="register()">
@@ -18,19 +18,9 @@
                     <label><input type="submit" value="Create Account" /></label>
                 </form>
             </div>
-            <div class="features">
-                <h3>Features</h3>
-                <ul>
-                    <li class="ad">100% Free Signup </li>
-                    <li class="ad">Loads of content</li>
-                    <li class="ad">Unlimited Streaming</li>
-                    <li class="ad">Invite Your Friends & Get Discounts</li>
-                </ul>
-            </div>
+            
 
-            <div class="plan">
-                <img src="https://res.cloudinary.com/fazurrehman/image/upload/v1484818922/dailyui/send-msg.png" alt="" />
-            </div>
+            
         </div>
     </div>
 </div>
