--- a/StreamingSiteUI/src/styles.css
+++ b/StreamingSiteUI/src/styles.css
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+   
+}
+body {
+    height:100%;
+}
+app-root {
+    height:100%;
+    display: block;
+}
+
+/* section {
+    height:100%;
+}
+app-discover {
+    display:block;
+    height:100%;
+
+}
+.main-content {
+    height:100%;
+}
+#page-wrapper {
+    height:100%;
+} */
