--- a/StreamingSiteUI/src/app/homepage/homepage.component.html
+++ b/StreamingSiteUI/src/app/homepage/homepage.component.html
@@ -68,37 +68,7 @@
         </div>
 
 
-        <ngu-carousel
-        [inputs]="carouselTile"
-        (initData)="initDataFn($event)"
-        
-        >
-   
-              <!-- <ngu-tile NguCarouselItem *ngFor="let media_item of media_listing" class="col-md-4 content-grid content"(click) ="openInfoOverlay(media_item.media_name)">
-              
-                <a class="play-icon popup-with-zoom-anim" href="#small-dialog">
-                  <img src="http://localhost:8000/api/image/{{media_item.id}}">
-                </a>
-                <div class="after tittle-head">
-                  <h4 class="tittle"></h4>
-                  </div>
-                  <div class="content-details fadeIn-top">
-                    <h3>{{media_item.media_name}}</h3>
-                    <p>This is a short description</p>
-                  </div>
-              
-              </ngu-tile> -->
-              <div class="row">
-                
-              </div>
-              <button NguCarouselPrev class='leftRs'>&lt;</button>
-            <button NguCarouselNext class='rightRs'>&gt;</button>
-            
-      
-      </ngu-carousel>
-        
-
-
+       
 
 
         <div class="clearfix"> </div>
@@ -108,7 +78,8 @@
     <main>
       
       <div class="row">
-        <div class="movie" *ngFor="let media_item of media_listing| slice:0:6; let i=index" (click) ="openInfoOverlay(media_item.media_name)">
+        <div class="movie" *ngFor="let media_item of media_listing| slice:0:5 ; let i=index" (click) ="openInfoOverlay(media_item.media_name,media_item.id)">
+
           <div class="text">
             <h2>{{media_item.media_name}}</h2>
             <div class="rating">
@@ -123,10 +94,21 @@
             <p>{{media_item.description}}</p>
             
           </div>
-          <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
-          <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:100%;border-radius:10px;"></div>
+          <!-- <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div> -->
+          <div class="movie-container">
+              <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:70%;">
+                <div class="overlay-text">
+                  <h4 style="color:white" >
+                      {{media_item.media_name}}
+                  </h4>
+              </div>
+                
+              </div>
+          </div>
+          
+          
         </div>
-        <!-- <div class="movie">
+         <!-- <div class="movie">
           <div class="text">
             <h2>The Martian</h2>
             <div class="rating">
@@ -232,7 +214,8 @@
         <main>
       
             <div class="row">
-              <div class="movie" *ngFor="let media_item of media_listing| slice:7:13; let i=index" (click) ="openInfoOverlay(media_item.media_name)">
+              <div class="movie" *ngFor="let media_item of media_listing| slice:7:12; let i=index" (click) ="openInfoOverlay(media_item.media_name,media_item.id)">
+
                 <div class="text">
                   <h2>{{media_item.media_name}}</h2>
                   <div class="rating">
@@ -248,8 +231,17 @@
                   
                 </div>
                 <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
-                <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:100%;border-radius:10px;"></div>
+                <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:70%;">
+                  <div class="overlay-text">
+                    <h4 style="color:white" >
+                        {{media_item.media_name}}
+                    </h4>
+                </div>
+                  
+                </div>
+                
               </div>
+               
               <!-- <div class="movie">
                 <div class="text">
                   <h2>The Martian</h2>
@@ -380,7 +372,7 @@
       <main>
       
           <div class="row">
-            <div class="movie" *ngFor="let media_item of media_listing| slice:10:15; let i=index" (click) ="openInfoOverlay(media_item.media_name)">
+            <div class="movie" *ngFor="let media_item of media_listing| slice:10:15; let i=index" (click) ="openInfoOverlay(media_item.media_name,media_item.id)">
               <div class="text">
                 <h2>{{media_item.media_name}}</h2>
                 <div class="rating">
@@ -396,7 +388,12 @@
                 
               </div>
               <div class="cover_blur" style="background-image: url(https://image.tmdb.org/t/p/w1280/zNjxzdgSwzRXnP8Stu3HGzKQKWp.jpg)"></div>
-              <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:100%;border-radius:10px;"></div>
+              <div class="cover" ><img src="http://localhost:8000/api/image/{{media_item.id}}" style="width:100%;height:70%;border-radius:10px;"></div>
+              <div class="overlay-text">
+                  <h4 style="color:white" >
+                      {{media_item.media_name}}
+                  </h4>
+              </div>
             </div>
             <!-- <div class="movie">
               <div class="text">
@@ -546,7 +543,7 @@
     <h3>Our Account</h3>
     <ul class="list1">
       <li>
-        <a href="#" data-toggle="modal" data-target="#myModal5">Your Account</a>
+        <a href="#">Your Account</a>
       </li>
       <li>
         <a href="#">Personal information</a>
@@ -572,7 +569,7 @@
     <h3>Our Support</h3>
     <ul class="list1">
       <li>
-        <a href="contact.html">Site Map</a>
+        <a href="#">Site Map</a>
       </li>
       <li>
         <a href="#">Search Terms</a>
@@ -584,7 +581,7 @@
         <a href="#">Mobile</a>
       </li>
       <li>
-        <a href="contact.html">Contact Us</a>
+        <a href="#">Contact Us</a>
       </li>
       <li>
         <a href="#">Mobile</a>
@@ -619,8 +616,10 @@
     </button>
   </div>
   <div class="info-overlay-image" oncontextmenu="return false" style="height:100%;">
-      <vg-player>
+      <vg-player (onPlayerReady)="onPlayerReady($event)">
+          <vg-overlay-play></vg-overlay-play>
           <vg-controls>
+              
               <vg-play-pause></vg-play-pause>
               
         
